--- a/packages/package-manager-apk/.goreleaser.yml
+++ b/packages/package-manager-apk/.goreleaser.yml
@@ -1,12 +1,14 @@
+# yaml-language-server: $schema=https://goreleaser.com/static/schema-pro.json
 version: 2
 project_name: devex-plugin-package-manager-apk
 monorepo:
-  tag_prefix: plugin-package-manager-apk-
+  tag_prefix: packages/package-manager-apk/v
   dir: packages/package-manager-apk
 builds:
   - id: plugin-package-manager-apk
     main: .
     binary: devex-plugin-package-manager-apk
+    dir: packages/package-manager-apk
     env:
       - CGO_ENABLED=0
     goos:
