fix(package-manager-dnf): update tag prefix and add dir for monorepo pattern

--- a/packages/package-manager-dnf/.goreleaser.yml
+++ b/packages/package-manager-dnf/.goreleaser.yml
@@ -1,12 +1,14 @@
+# yaml-language-server: $schema=https://goreleaser.com/static/schema-pro.json
 version: 2
 project_name: devex-plugin-package-manager-dnf
 monorepo:
-  tag_prefix: plugin-package-manager-dnf-
+  tag_prefix: packages/package-manager-dnf/v
   dir: packages/package-manager-dnf
 builds:
   - id: plugin-package-manager-dnf
     main: .
     binary: devex-plugin-package-manager-dnf
+    dir: packages/package-manager-dnf
     env:
       - CGO_ENABLED=0
     goos:
