fix(package-manager-nixpkgs): update tag prefix and add dir for monorepo pattern

--- a/packages/package-manager-nixpkgs/.goreleaser.yml
+++ b/packages/package-manager-nixpkgs/.goreleaser.yml
@@ -1,12 +1,14 @@
+# yaml-language-server: $schema=https://goreleaser.com/static/schema-pro.json
 version: 2
 project_name: devex-plugin-package-manager-nixpkgs
 monorepo:
-  tag_prefix: plugin-package-manager-nixpkgs-
+  tag_prefix: packages/package-manager-nixpkgs/v
   dir: packages/package-manager-nixpkgs
 builds:
   - id: plugin-package-manager-nixpkgs
     main: .
     binary: devex-plugin-package-manager-nixpkgs
+    dir: packages/package-manager-nixpkgs
     env:
       - CGO_ENABLED=0
     goos:
