fix(registry): fixed db sync

--- a/apps/cli/config/applications/optional/proton-vpn.yaml
+++ b/apps/cli/config/applications/optional/proton-vpn.yaml
@@ -5,13 +5,10 @@ desktop_environments:
   - gnome-family
 linux:
   install_method: script
-  install_command: 'wget https://repo.protonvpn.com/debian/dists/stable/main/binary-all/protonvpn-stable-release_1.0.4_all.deb &&
-
+  install_command: |
+    wget https://repo.protonvpn.com/debian/dists/stable/main/binary-all/protonvpn-stable-release_1.0.4_all.deb &&
     sudo dpkg -i ./protonvpn-stable-release_1.0.4_all.deb && sudo apt update &&
-
     sudo apt install proton-vpn-gnome-desktop libayatana-appindicator3-1 gir1.2-ayatanaappindicator3-0.1 gnome-shell-extension-appindicator
-
-'
   uninstall_command: sudo apt remove proton-vpn-gnome-desktop libayatana-appindicator3-1 gir1.2-ayatanaappindicator3-0.1 gnome-shell-extension-appindicator
   dependencies:
     - apt
