fix(registry): standardize metadata.yaml structure and complete plugin coverage
  Changed repository field from nested object to flat structure to fix Go
  YAML unmarshaling errors in package tests. Created metadata.yaml files for
  all 31 remaining plugins to ensure consistent plugin data management.

  Changes:
  - Fixed repository structure: use flat  +  fields
  - Created 18 package manager metadata files (apk, flatpak, snap, etc.)
  - Created 9 desktop environment metadata files
  - Created 3 tool metadata files (git, shell, stackdetector)
  - Created 1 system metadata file (system-setup)
  - Updated sync-database.ts interface to match flat structure
  - Fixed missing githubUrl field in applications API route
  - Fixed missing githubUrl field in applications page

  This completes the transition to metadata.yaml as the single source of
  truth for plugin data, fixing incorrect platform support and GitHub links.

--- a/packages/package-manager-appimage/metadata.yaml
+++ b/packages/package-manager-appimage/metadata.yaml
@@ -1,51 +1,43 @@
-# Plugin Metadata for DNF Package Manager
-name: package-manager-dnf
+# Plugin Metadata for AppImage Package Manager
+name: package-manager-appimage
 type: package-manager
-description: DNF package manager support for Fedora/RHEL systems
+description: AppImage universal application format support for Linux
 version: 1.0.0
 author: DevEx Team
 license: MIT
 # Repository Information
 repository: https://github.com/jameswlane/devex
-directory: packages/package-manager-dnf
+directory: packages/package-manager-appimage
 # Platform Support
 platforms:
   linux:
     distros:
+      - debian
+      - ubuntu
       - fedora
-      - rhel
-      - centos
-      - rocky
-      - almalinux
-      - oracle
+      - arch
+      - opensuse
     architectures:
       - amd64
       - arm64
-    min_version: "8" # Minimum RHEL/CentOS version
 # SDK Compatibility
 sdk_version: "1.0.0"
 api_version: "v1"
 # Dependencies & Conflicts
 dependencies: []
-conflicts:
-  - package-manager-yum # DNF replaces YUM
+conflicts: []
 # Capabilities
 supports:
   install: true
   uninstall: true
-  update: true
-  search: true
+  update: false
+  search: false
   list: true
-  repository_management: true
-  module_streams: true
 # Priority (lower number = higher priority)
-priority: 10
+priority: 40
 # Tags for discovery
 tags:
   - package-manager
-  - dnf
-  - fedora
-  - rhel
-  - centos
+  - appimage
   - linux
-  - system
+  - universal
