--- a/packages/package-manager-flatpak/metadata.yaml
+++ b/packages/package-manager-flatpak/metadata.yaml
@@ -1,28 +1,23 @@
-# Plugin Metadata for Homebrew Package Manager
-name: package-manager-brew
+# Plugin Metadata for Flatpak Package Manager
+name: package-manager-flatpak
 type: package-manager
-description: Homebrew package manager support for macOS and Linux
+description: Flatpak universal application distribution for Linux
 version: 1.0.0
 author: DevEx Team
 license: MIT
 # Repository Information
 repository: https://github.com/jameswlane/devex
-directory: packages/package-manager-brew
+directory: packages/package-manager-flatpak
 # Platform Support
 platforms:
-  darwin:
-    distros: [] # macOS doesn't have distros
-    architectures:
-      - amd64
-      - arm64 # M1/M2 Macs
-    min_version: "10.15" # macOS Catalina
   linux:
     distros:
       - debian
       - ubuntu
       - fedora
-      - centos
-      - alpine
+      - arch
+      - opensuse
+      - mint
     architectures:
       - amd64
       - arm64
@@ -39,17 +34,14 @@ supports:
   update: true
   search: true
   list: true
-  cask: true # macOS GUI applications
-  tap: true # Third-party repositories
-  services: true # Service management
+  repository_management: true
+  sandboxing: true
 # Priority (lower number = higher priority)
-priority: 5 # Higher priority on macOS
+priority: 30
 # Tags for discovery
 tags:
   - package-manager
-  - brew
-  - homebrew
-  - macos
-  - darwin
+  - flatpak
   - linux
-  - cross-platform
+  - universal
+  - sandbox
