--- a/packages/package-manager-yay/metadata.yaml
+++ b/packages/package-manager-yay/metadata.yaml
@@ -1,34 +1,31 @@
-# Plugin Metadata for DNF Package Manager
-name: package-manager-dnf
+# Plugin Metadata for Yay AUR Helper
+name: package-manager-yay
 type: package-manager
-description: DNF package manager support for Fedora/RHEL systems
+description: Yay AUR helper for Arch Linux User Repository
 version: 1.0.0
 author: DevEx Team
 license: MIT
 # Repository Information
 repository: https://github.com/jameswlane/devex
-directory: packages/package-manager-dnf
+directory: packages/package-manager-yay
 # Platform Support
 platforms:
   linux:
     distros:
-      - fedora
-      - rhel
-      - centos
-      - rocky
-      - almalinux
-      - oracle
+      - arch
+      - manjaro
+      - endeavouros
+      - garuda
     architectures:
       - amd64
       - arm64
-    min_version: "8" # Minimum RHEL/CentOS version
 # SDK Compatibility
 sdk_version: "1.0.0"
 api_version: "v1"
 # Dependencies & Conflicts
-dependencies: []
-conflicts:
-  - package-manager-yum # DNF replaces YUM
+dependencies:
+  - package-manager-pacman
+conflicts: []
 # Capabilities
 supports:
   install: true
@@ -36,16 +33,14 @@ supports:
   update: true
   search: true
   list: true
-  repository_management: true
-  module_streams: true
+  aur_access: true
 # Priority (lower number = higher priority)
-priority: 10
+priority: 15
 # Tags for discovery
 tags:
   - package-manager
-  - dnf
-  - fedora
-  - rhel
-  - centos
+  - yay
+  - aur
+  - arch
   - linux
-  - system
+  - helper
