chore(cli): update configuration templates and package metadata
- Update minimal.yaml and web-development.yaml templates
- Update CLI package.json metadata

These changes reflect the new plugin system and updated
application configurations.

--- a/apps/cli/assets/templates/minimal.yaml
+++ b/apps/cli/assets/templates/minimal.yaml
@@ -16,10 +16,9 @@ metadata:
   icon: ⚡
   additive: true
 applications:
-  - baseconfig:
-      name: vim
-      description: Text editor
-      category: development
+  - name: vim
+    description: Text editor
+    category: development
     install_method: apt
     install_command: vim
     default: true
@@ -28,5 +27,5 @@ environment:
   editor: vim
   languages: []
 system:
-  git_config: true
-  ssh_config: true
+  configure_git: true
+  configure_ssh: true
