fix(lint): add --allow-parallel-runners flag to all golangci-lint commands
TurboRepo runs lint tasks in parallel across multiple packages, which causes
golangci-lint to exit with 'parallel golangci-lint is running' error.

Added --allow-parallel-runners flag to all 36 package.json files:
- apps/cli/package.json
- packages/plugin-sdk/package.json
- All plugin packages (desktop-*, package-manager-*, tool-*)

This allows golangci-lint to run concurrently when TurboRepo executes
multiple lint tasks in parallel, fixing the CI pipeline errors.

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -15,7 +15,7 @@
 		"docker:setup-verbose": "scripts/docker.sh setup-verbose",
 		"docker:shell": "scripts/docker.sh shell",
 		"download": "go mod download",
-		"lint": "golangci-lint run",
+		"lint": "golangci-lint run --allow-parallel-runners",
 		"mod": "go mod tidy",
 		"test": "go test ./..."
 	}
