--- a/packages/package-manager-apt/package.json
+++ b/packages/package-manager-apt/package.json
@@ -8,7 +8,7 @@
 		"build": "go build -o devex-plugin-package-manager-apt .",
 		"test": "go test ./...",
 		"dev": "go build -race -o devex-plugin-package-manager-apt .",
-		"lint": "golangci-lint run",
+		"lint": "golangci-lint run --allow-parallel-runners",
 		"download": "go mod download",
 		"mod": "go mod tidy"
 	},
