--- a/packages/tool-git/package.json
+++ b/packages/tool-git/package.json
@@ -8,7 +8,7 @@
 		"build": "go build -o devex-plugin-tool-git .",
 		"dev": "go build -race -o devex-plugin-tool-git main.go",
 		"test": "go test ./...",
-		"lint": "golangci-lint run",
+		"lint": "golangci-lint run --allow-parallel-runners",
 		"download": "go mod download",
 		"mod": "go mod tidy"
 	},
